(ISA-336) moved floating pills behind leaflet controls to fix basemap list hover bug

--- a/frontend/src/ui/css/app.scss
+++ b/frontend/src/ui/css/app.scss
@@ -717,6 +717,7 @@ input.leaflet-control-layers-selector[type="radio"] {
 }
 /* Chunkier leaflet controls end */
 
+.leaflet-control-layers,
 .leaflet-bar { border-radius: 0; }
 
 // Right drawer shared
